HEAD
	+ Add dpkg trigger to restart module when samba package is upgraded
3.5.5
	+ Adapted to changes in group mail account
3.5.4
	+ Show a warning on post save changes dialog if errors happend while
	  setting shares ACLs
	+ Do not check for acl and user_xattr filesystem options if filesystem is
	  btrfs
	+ Provision: Check domain netbios name is not equal to host netbios name
	+ Resolve schema master dns name and try to connect to all returned IP
	  addresses until success
	+ Skip schema extensions if module disabled
3.5.3
	+ Use bash as default shell
	+ Added external AD field to LDAP information model
	+ Allow unsafe chars on admin account to use for join a domain
	+ Improve the LDIF files parsing created by output of ldbsearch command
	+ Fixed problems with checking mail address duplicates
	+ Fixed bug which could delete the group mail account after a
	  group edit
	+ openchange.conf named properties config uses splitted params
	+ Added EBox::module::LDAP::_loadSchemasFiles
	+ Added EBox::Samba::LdapObject::hasObjectClass
	+ Hide the dns-hostname account after join a domain
	+ Remove mail account management logic from edit user form. This field
	  is now disabled when the mail module is installed, so account management
	  like create, rename or delete it must be done in the mail module user
	  addon
	+ Added code for migration from 3.4
	+ Instance groups using gid parameter is no longer allowed
3.5.2
	+ Fix sssd bug not finding users and groups
	+ Deprecate _schemasAdded redis key, checking if schema is extended in
	  module _regenConfig
	+ Fixed use of deprecated attributes uid and gid instantiating users and
	  groups
3.5.1
	+ Display correctly tree elements on external AD mode
	+ Fixed user creation when remove user from a group in the
	  EditGroup CGI
	+ The groups and groupsNotIn methods have now the same behaviour
	  for all EBox::Samba::OrganizationalPerson classes
	+ When removing a share the 'has files' check is not longer
	  dependent on ACLs