@@ -1,4 +1,6 @@
 HEAD
+	+ Implement nameserverAdded and nameserverDelete from NetworkObserver to
+	  reset LDAP connection if name servers change in external AD mode
 	+ Add dpkg trigger to restart module when samba package is upgraded
 3.5.5
 	+ Adapted to changes in group mail account
